# rust_web-scraping

./: Cargo.toml  app.yaml  athing_element.rs  document  srape_learn.md  wasmer.toml
src/: main.rs  news_scraper.rs
