[package]
name = "news-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
hyper = "0.14.27"
reqwest = "0.11.22"
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
